Version 2.0, xx April 2004

 15. Removed system-specific includes from headers, and modified some
     structures definitions to use standard C types instead of posix
     types (in particular changed uid_t into long, key_t into long and
     u_long into unsigned long). This shouldn't break anything.
 14. Implemented and added semMCreate() and converted commonStruct.c and
     h2timerLib.c functions to use it instead of pthread_*
     routines. Added h2timerEnd() that undo h2timerInit() actions. Made
     SEM_ID an opaque data type in order to hide some pthread-specific
     stuff from headers.
 13. Made OS_TCB an opaque data type and put the definition in
     taskLib.c. Moved the errnoGet,Set() functions into taskLib.c since
     they need access to the TCB. Replaced tcb->name by taskName() calls
     in mboxLib.c.
 12. Added taskName() and osExit() functions to portLib. Turned the
     logMsg #define into a real function definition and created logLib.h
     header.
 11. Moved config.h to pocolibs-config.h in order to prevent name clashes
     with <linux/config.h> when compiling linux modules.
 10. Created os/posix subdirectories and moved some posix specific files
     in there in order to prepare the upcoming rtai support.
  9. Get rid of the remaining ifdef __DARWIN__ checks. They are not
     needed with Mac OS X 10.3.3 anymore, and I don't intend to support
     earlier versions.
  8. Add support for rpcgen -C in posterServ. Removes one of the 
     last #ifdef <system>, and makes this stuff build on MacOS X.
  7. Split aclocal.m4. 
  6. Effectively handle the possibility to disable X11 (xes).
  5. Look for rpcgen instead of blindly using `rpcgen' (useful for
     cross-compiling).
  4. Install include files (Anthony Mallet).
  3. Fix detection of thread-related options in C compilers.
  2. Adapt the build system to use GNU configure and libtool.
  1. Import the current internal LAAS version

$LAAS$